// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RecommendedItem /> render with props should correct render with all props 1`] = `
<withGlobalListeners(RecommendedItem)
  addGlobalListener={[MockFunction]}
  currencyGrapheme="$"
  imageSrc="https://cdn2.static1-sima-land.com/items/3592229/4/140.jpg?v=1549604912"
  name="Милая картина из шерсти Schrodinger cat, А5"
  oldPrice={234.9}
  onItemClick={[MockFunction]}
  onQuickViewClick={[MockFunction]}
  price={135.4}
  url="https://www.sima-land.ru/3266880/nabor-dlya-tvorchestva-topiariy-xyezhnost-d-shara-6-cm/"
>
  <RecommendedItem
    addGlobalListener={[Function]}
    currencyGrapheme="$"
    imageSrc="https://cdn2.static1-sima-land.com/items/3592229/4/140.jpg?v=1549604912"
    name="Милая картина из шерсти Schrodinger cat, А5"
    oldPrice={234.9}
    onItemClick={[MockFunction]}
    onQuickViewClick={[MockFunction]}
    price={135.4}
    url="https://www.sima-land.ru/3266880/nabor-dlya-tvorchestva-topiariy-xyezhnost-d-shara-6-cm/"
  >
    <div
      className="item"
    >
      <div
        className="image-wrapper"
      >
        <img
          alt="Милая картина из шерсти Schrodinger cat, А5"
          className="image"
          src="https://cdn2.static1-sima-land.com/items/3592229/4/140.jpg?v=1549604912"
        />
        <ItemQuickViewButton
          additionalClassName="quick-view-button"
          onClick={[MockFunction]}
        >
          <button
            className="quick-view-button quick-view-button"
            onClick={[MockFunction]}
          >
            Быстрый просмотр
          </button>
        </ItemQuickViewButton>
      </div>
      <div
        className="price-wrapper"
      >
        <Price
          className="price"
          currencyGrapheme="$"
          fractionalSign=","
          value={135.4}
        >
          <span
            className="price price"
          >
            135
            ,40
            <span>
               $
            </span>
          </span>
        </Price>
        <Price
          className="old-price"
          currencyGrapheme="$"
          old={true}
          value={234.9}
        >
          <span
            className="price old-price old-price"
          >
            234
            ,90
            <span>
               $
            </span>
          </span>
        </Price>
      </div>
      <ForwardRef(Link)
        className="link"
        color="black"
        disableHoverEffect={true}
        href="https://www.sima-land.ru/3266880/nabor-dlya-tvorchestva-topiariy-xyezhnost-d-shara-6-cm/"
        onClick={[MockFunction]}
      >
        <a
          className="link link color__black"
          disableHoverEffect={true}
          href="https://www.sima-land.ru/3266880/nabor-dlya-tvorchestva-topiariy-xyezhnost-d-shara-6-cm/"
          onClick={[MockFunction]}
        >
          Милая картина из шерсти Schrodinger cat, А5
        </a>
      </ForwardRef(Link)>
    </div>
  </RecommendedItem>
</withGlobalListeners(RecommendedItem)>
`;

exports[`<RecommendedItem /> render with props should correct render without oldPrice and onQuickViewClick 1`] = `
<withGlobalListeners(RecommendedItem)
  addGlobalListener={[MockFunction]}
  currencyGrapheme="$"
  imageSrc="https://cdn2.static1-sima-land.com/items/3592229/4/140.jpg?v=1549604912"
  name="Милая картина из шерсти Schrodinger cat, А5"
  onItemClick={[MockFunction]}
  price={135.4}
  url="https://www.sima-land.ru/3266880/nabor-dlya-tvorchestva-topiariy-xyezhnost-d-shara-6-cm/"
>
  <RecommendedItem
    addGlobalListener={[Function]}
    currencyGrapheme="$"
    imageSrc="https://cdn2.static1-sima-land.com/items/3592229/4/140.jpg?v=1549604912"
    name="Милая картина из шерсти Schrodinger cat, А5"
    onItemClick={[MockFunction]}
    price={135.4}
    url="https://www.sima-land.ru/3266880/nabor-dlya-tvorchestva-topiariy-xyezhnost-d-shara-6-cm/"
  >
    <div
      className="item"
    >
      <div
        className="image-wrapper"
      >
        <img
          alt="Милая картина из шерсти Schrodinger cat, А5"
          className="image"
          src="https://cdn2.static1-sima-land.com/items/3592229/4/140.jpg?v=1549604912"
        />
        <ItemQuickViewButton
          additionalClassName="quick-view-button"
        >
          <button
            className="quick-view-button quick-view-button"
            onClick={null}
          >
            Быстрый просмотр
          </button>
        </ItemQuickViewButton>
      </div>
      <div
        className="price-wrapper"
      >
        <Price
          className="price"
          currencyGrapheme="$"
          fractionalSign=","
          value={135.4}
        >
          <span
            className="price price"
          >
            135
            ,40
            <span>
               $
            </span>
          </span>
        </Price>
      </div>
      <ForwardRef(Link)
        className="link"
        color="black"
        disableHoverEffect={true}
        href="https://www.sima-land.ru/3266880/nabor-dlya-tvorchestva-topiariy-xyezhnost-d-shara-6-cm/"
        onClick={[MockFunction]}
      >
        <a
          className="link link color__black"
          disableHoverEffect={true}
          href="https://www.sima-land.ru/3266880/nabor-dlya-tvorchestva-topiariy-xyezhnost-d-shara-6-cm/"
          onClick={[MockFunction]}
        >
          Милая картина из шерсти Schrodinger cat, А5
        </a>
      </ForwardRef(Link)>
    </div>
  </RecommendedItem>
</withGlobalListeners(RecommendedItem)>
`;

exports[`<RecommendedItem /> without props should match snapshot 1`] = `
<RecommendedItem
  addGlobalListener={[Function]}
/>
`;
